syntax = "proto3";

package llmariner.batch.server.v1;

import "google/api/annotations.proto";

option go_package = "github.com/llmariner/job-manager/api/v1";

message BatchJob {
  string id = 1;

  int64 created_at = 2;
  int64 finished_at = 3;

  message Error {
    string code = 1;
    string message = 2;
  }
  Error error = 4;
  string status = 5;

  string image = 6;
  string command = 7;

  message Resources {
    int32 gpu_count = 1;
  }
  Resources resources = 8;
  map<string, string> envs = 9;
  repeated string data_files = 10;

  string project_id = 11;
  string kubernetes_namespace = 12;
  // cluster_id is the ID of the cluster where he job runs.
  string cluster_id = 13;

  message Kind {
    oneof Kind {
      PyTorchJob pytorch = 14;
    }
  }
  Kind kind = 15;

  string organization_title = 16;
  string project_title = 17;
  string cluster_name = 18;
}

message PyTorchJob {
  int32 worker_count = 1;
}

message CreateBatchJobRequest {
  string image = 1;
  string command = 2;
  // scripts is a map of script names to script contents.
  // The total size of the scripts should not exceed 1MB.
  map<string, bytes> scripts = 3;

  BatchJob.Resources resources = 4;
  map<string, string> envs = 5;
  // data_files is a list of file IDs that will be downloaded to the container.
  repeated string data_files = 6;

  BatchJob.Kind kind = 7;
}

message ListBatchJobsRequest {
  // after is the identifier for the last batch job from the previous pagination request.
  string after = 1;
  // limit is the number of batch jobs to retrieve. Defaults to 20.
  int32 limit = 2;
}

message ListBatchJobsResponse {
  repeated BatchJob jobs = 1;
  bool has_more = 2;
}

message GetBatchJobRequest {
  string id = 1;
}

message CancelBatchJobRequest {
  string id = 1;
}

message DeleteBatchJobRequest {
  string id = 1;
}

service BatchService {
  rpc CreateBatchJob(CreateBatchJobRequest) returns (BatchJob) {
    option (google.api.http) = {
      post: "/v1/batch/jobs"
      body: "*"
    };
  }
  rpc ListBatchJobs(ListBatchJobsRequest) returns (ListBatchJobsResponse) {
    option (google.api.http) = {
      get: "/v1/batch/jobs"
    };
  }
  rpc GetBatchJob(GetBatchJobRequest) returns (BatchJob) {
    option (google.api.http) = {
      get: "/v1/batch/jobs/{id}"
    };
  }
  rpc CancelBatchJob(CancelBatchJobRequest) returns (BatchJob) {
    option (google.api.http) = {
      post: "/v1/batch/jobs/{id}/cancel"
    };
  }
  rpc DeleteBatchJob(DeleteBatchJobRequest) returns (BatchJob) {
    option (google.api.http) = {
      delete: "/v1/batch/jobs/{id}"
    };
  }
}

message InternalBatchJob {
  BatchJob job = 1;

  enum State {
    STATE_UNSPECIFIED = 0;
    QUEUED = 1;
    RUNNING = 2;
    SUCCEEDED = 3;
    FAILED = 4;
    CANCELED = 5;
    DELETED = 6;
  }
  State state = 2;

  enum Action {
    ACTION_UNSPECIFIED = 0;
    CREATING = 1;
    CANCELING = 2;
    DELETING = 3;
  }
  Action queued_action = 3;
}

message ListQueuedInternalBatchJobsRequest {
}

message ListQueuedInternalBatchJobsResponse {
  repeated InternalBatchJob jobs = 1;
}

message GetInternalBatchJobRequest {
  string id = 1;
}

message UpdateBatchJobStateRequest {
  string id = 1;
  InternalBatchJob.State state = 2;

  // currently only used for FAILED state.
  string reason = 3;
  string message = 4;
}

message UpdateBatchJobStateResponse {
}

service BatchWorkerService {
  rpc ListQueuedInternalBatchJobs(ListQueuedInternalBatchJobsRequest) returns (ListQueuedInternalBatchJobsResponse);
  rpc GetInternalBatchJob(GetInternalBatchJobRequest) returns (InternalBatchJob);
  rpc UpdateBatchJobState(UpdateBatchJobStateRequest) returns (UpdateBatchJobStateResponse);
}
