syntax = "proto3";

package llmariner.jobs.server.v1;

import "google/api/annotations.proto";
import "api/v1/job_manager_server_worker.proto";
import "google/protobuf/duration.proto";

option go_package = "github.com/llmariner/job-manager/api/v1";

message Cluster {
  message Summary {
    int32 gpu_capacity = 1;
    int32 gpu_allocated = 2;
    int32 gpu_pod_count = 3;
  }

  string id = 1;

  string name = 2;
  ClusterStatus status = 3;
  Summary summary = 4;

  // last_updated_at is the last time the cluster was updated in Unix nano seconds.
  int64 last_updated_at = 5;
}

message ListClustersRequest {
}

message ListClustersResponse {
  repeated Cluster clusters = 1;
}

message RequestFilter {
  // start_timestamp specifies the start time of the snapshot histories (inclusive). Unix timestamp in seconds.
  int64 start_timestamp = 1;
  // end_timestamp specifies the end time of the snapshot histories (exclusive). Unix timestamp in seconds.
  int64 end_timestamp = 2;
  // duration specifies the duration for each data point.
  google.protobuf.Duration duration = 3;
}

enum JobType {
  JOB_TYPE_UNSPECIFIED = 0;
  JOB_TYPE_BATCH = 1;
  JOB_TYPE_FINE_TUNING = 2;
  JOB_TYPE_NOTEBOOK = 3;
}

message ListJobSummariesRequest {
  RequestFilter filter = 1;
}

message ListJobSummariesResponse {
  message Value {
    JobType job_type = 1;

    int64 total_created = 2;
    int64 total_completed = 3;
    int64 total_cancelled = 4;
    int64 total_failed = 5;
    int64 total_deleted = 6;
    int64 total_running = 7;
    int64 total_queued = 8;
    int64 total_stopped = 9;
    // total_unfinished tracks the number of job in unfinished status, such as initializing, queued, or running.
    int64 total_unfinished = 10;
  }

  message Datapoint {
    // timestamp is the Unix timestamp in seconds.
    int64 timestamp = 1;
    repeated Value values = 2;
  }

  repeated Datapoint datapoints = 1;
}

// JobService is a generic service for fine-tuning jobs, batch jobs, and workspaces.
// Currently this is mainly for debug.
service JobService {
  rpc ListClusters(ListClustersRequest) returns (ListClustersResponse) {
    option (google.api.http) = {
      get: "/v1/jobs/clusters"
    };
  }

  rpc ListJobSummaries(ListJobSummariesRequest) returns (ListJobSummariesResponse) {
    option (google.api.http) = {
      get: "/v1/jobs/summaries"
    };
  }
}
